# mauritius-renaldataregistry

./: .dockerignore  .gitignore  Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: dispatch.yml
docs/: Mauritus_technicalspecv1.docx  Mauritus_usermanualv1.docx
nginx/: default.conf.template
renaldataregistry/: admin.py  apps.py  models.py
renaldataregistry/migrations/: 0001_initial.py
src/: manage.py
src/mauritiusrenalregistry/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/renaldataregistry/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/renaldataregistry/fixtures/: data.json
src/renaldataregistry/migrations/: 0001_initial.py  0002_alter_patient_pid.py  0002_alter_renaldiagnosis.py  0002_auto_20210818_1529.py  0002_remove_patientassessment_laboratoryparameter.py  0003_alter_patientmeasurement_measurementtype.py  0003_patientassessment_clinical_frailty.py  0003_remove_patientassessment_medication.py  0004_medication_type.py  0004_patientassessmentmed_1.py  0004_patientregistrationhistory.py  0005_auto_20211114_1458.py  0005_delete_patientregistrationhistory.py  0005_patientassessmentmed_2.py  0006_historicalpatientregistration.py  0006_patientkrtmodality_hd_privatestart.py  0007_alter_patientkrtmodality_hd_privatestart.py  0007_alter_patientregistration.py  0008_alter_forkrt.py  0009_alter_krtmod.py  (+3 more)
src/templates/: base.html  home.html
src/users/: admin.py  forms.py  managers.py  models.py  views.py
src/utils/: mixin.py
(+25 files in other folders)
