[build-system]
build-backend = 'setuptools.build_meta'
requires = [
  "setuptools >= 40.0.4",
  "setuptools_scm >= 2.0.0",
  "wheel >= 0.29.0",
]

[tool.black]
exclude = '(\.eggs|\.git|\.venv|node_modules/)'

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pylint.'MESSAGES CONTROL']
disable = "duplicate-code, pointless-string-statement, unsubscriptable-object, fixme, missing-module-docstring, missing-class-docstring, too-few-public-methods, too-many-arguments, line-too-long, too-many-locals, too-many-ancestors"
max-line-length = 88

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "crispy_forms.*",
  "bootstrap_datepicker_plus.*",
  "simple_history.*",
]

[tool.django-stubs]
django_settings_module = "mauritiusrenalregistry.settings"
